# tree-sitter-smali

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-smali.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_smali/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSmali/: smali.h
bindings/swift/TreeSitterSmaliTests/: TreeSitterSmaliTests.swift
queries/: brackets.scm  folds.scm  highlights.scm  indents.scm  locals.scm  outline.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: classes  fields  fragments  interfaces  keyword_identifiers  methods  params  statements  unicode_identifiers
