[package]
name = "tree-sitter-smali-valonsodev"
description = "Smali grammar for tree-sitter"
version = "0.1.2"
authors = ["valonsodev"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "smali"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/valonsodev/tree-sitter-smali.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "README.md",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.8"
